View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028444 | Open CASCADE | OCCT:Data Exchange | public | 2017-02-06 18:12 | 2018-10-21 22:06 |
Reporter | ika | Assigned To | apn | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028444: Data Exchange - Missed text blocks in Saved Views | ||||
Description | Some text blocks are not displayed in Views. | ||||
Steps To Reproduce | gdt export C1 gdt presentation B9 gdt view B6 | ||||
Tags | No tags attached. | ||||
Test case number | gdt export C1; gdt presentation B9; gdt view B6 | ||||
|
Branch CR28444 has been created by ika. SHA-1: 78c144fc3e3491e05446dbf297a2e6665cfbe051 Detailed log of new commits: Author: ika Date: Wed Feb 1 19:17:48 2017 +0300 0028444: Data Exchange - Missed text blocks in Saved Views Add new STEP entity to connect dimension semantic with presentation. Fix number of GDTs in Saved View. |
|
bug28444_nist_ftc_06_asme1_ct5240_rd.stp (1,710,893 bytes) |
|
Dear GKA, could you please review branch CR28444? |
|
Branch CR28444 is ready to be tested. |
|
Dear BugMaster, Branch CR28444 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 78c144fc3e3491e05446dbf297a2e6665cfbe051 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 64 (64 on master) Windows: 0 (0 on master) MacOS : 1193 Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR28444-master-OCCT/Debian70-64/gdt/export/C1.html http://occt-tests/CR28444-master-OCCT/Windows-64-VC10/gdt/export/C1.html gdt export C1: OK http://occt-tests/CR28444-master-OCCT/Debian70-64/gdt/presentation/B9.html http://occt-tests/CR28444-master-OCCT/Windows-64-VC10/gdt/presentation/B9.html gdt presentation B9: OK http://occt-tests/CR28444-master-OCCT/Debian70-64/gdt/view/B6.html http://occt-tests/CR28444-master-OCCT/Windows-64-VC10/gdt/view/B6.html gdt view B6: OK Testing on Linux: occt component : Total MEMORY difference: 91962035 / 91294339 [+0.73%] Total CPU difference: 19743.240000000325 / 19662.570000000327 [+0.41%] products component : Total MEMORY difference: 30940000 / 30945304 [-0.02%] Total CPU difference: 5516.809999999967 / 5489.009999999974 [+0.51%] Testing on Windows: occt component : Total MEMORY difference: 57128614 / 57124391 [+0.01%] Total CPU difference: 18292.490058798656 / 18512.045866198645 [-1.19%] products component : Total MEMORY difference: 22184414 / 22145684 [+0.17%] Total CPU difference: 5473.575886799973 / 5407.618663999976 [+1.22%] There are no differences in images found by testdiff. |
|
Dear BugMaster, Branch CR28444 is TESTED. |
|
Branch CR28444 has been deleted by inv. SHA-1: 78c144fc3e3491e05446dbf297a2e6665cfbe051 |
occt: master c4fa1c2c 2017-02-01 16:17:48 Committer: apn Details Diff |
0028444: Data Exchange - Missed text blocks in Saved Views Add new STEP entity to connect dimension semantic with presentation. Fix number of GDTs in Saved View. |
Affected Issues 0028444 |
|
mod - src/RWStepAP214/RWStepAP214_GeneralModule.cxx | Diff File | ||
mod - src/RWStepAP214/RWStepAP214_ReadWriteModule.cxx | Diff File | ||
mod - src/RWStepVisual/FILES | Diff File | ||
add - src/RWStepVisual/RWStepVisual_RWAnnotationCurveOccurrenceAndAnnotationOccurrenceAndGeomReprItemAndReprItemAndStyledItem.cxx | Diff File | ||
add - src/RWStepVisual/RWStepVisual_RWAnnotationCurveOccurrenceAndAnnotationOccurrenceAndGeomReprItemAndReprItemAndStyledItem.hxx | Diff File | ||
mod - src/StepAP214/StepAP214_Protocol.cxx | Diff File | ||
mod - src/STEPCAFControl/STEPCAFControl_Reader.cxx | Diff File | ||
mod - src/StepVisual/FILES | Diff File | ||
add - src/StepVisual/StepVisual_AnnotationCurveOccurrenceAndAnnotationOccurrenceAndGeomReprItemAndReprItemAndStyledItem.cxx | Diff File | ||
add - src/StepVisual/StepVisual_AnnotationCurveOccurrenceAndAnnotationOccurrenceAndGeomReprItemAndReprItemAndStyledItem.hxx | Diff File | ||
add - tests/gdt/export/C1 | Diff File | ||
add - tests/gdt/presentation/B9 | Diff File | ||
mod - tests/gdt/view/A1 | Diff File | ||
mod - tests/gdt/view/A2 | Diff File | ||
mod - tests/gdt/view/A3 | Diff File | ||
mod - tests/gdt/view/A4 | Diff File | ||
mod - tests/gdt/view/A5 | Diff File | ||
mod - tests/gdt/view/A6 | Diff File | ||
mod - tests/gdt/view/A7 | Diff File | ||
mod - tests/gdt/view/A8 | Diff File | ||
mod - tests/gdt/view/A9 | Diff File | ||
mod - tests/gdt/view/B1 | Diff File | ||
mod - tests/gdt/view/B2 | Diff File | ||
mod - tests/gdt/view/B4 | Diff File | ||
mod - tests/gdt/view/B5 | Diff File | ||
add - tests/gdt/view/B6 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-02-06 18:12 | ika | New Issue | |
2017-02-06 18:12 | ika | Assigned To | => ika |
2017-02-07 12:13 | git | Note Added: 0063477 | |
2017-02-07 12:13 | ika | File Added: bug28444_nist_ftc_06_asme1_ct5240_rd.stp | |
2017-02-07 12:14 | ika | Note Added: 0063478 | |
2017-02-07 12:14 | ika | Assigned To | ika => gka |
2017-02-07 12:14 | ika | Status | new => resolved |
2017-02-07 12:14 | ika | Steps to Reproduce Updated | |
2017-02-07 14:23 |
|
Note Added: 0063493 | |
2017-02-07 14:23 |
|
Assigned To | gka => bugmaster |
2017-02-07 14:23 |
|
Status | resolved => reviewed |
2017-02-07 14:31 |
|
Assigned To | bugmaster => mkv |
2017-02-08 17:31 |
|
Note Added: 0063704 | |
2017-02-08 17:31 |
|
Note Added: 0063705 | |
2017-02-08 17:31 |
|
Assigned To | mkv => bugmaster |
2017-02-08 17:31 |
|
Status | reviewed => tested |
2017-02-08 17:32 |
|
Test case number | => gdt export C1; gdt presentation B9; gdt view B6 |
2017-02-10 14:33 | apn | Changeset attached | => occt master c4fa1c2c |
2017-02-10 14:33 | apn | Assigned To | bugmaster => apn |
2017-02-10 14:33 | apn | Status | tested => verified |
2017-02-10 14:33 | apn | Resolution | open => fixed |
2017-03-20 14:35 | git | Note Added: 0064499 | |
2017-05-19 14:03 |
|
Relationship added | related to 0028044 |
2017-09-29 16:18 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:25 |
|
Status | verified => closed |
2018-10-21 22:06 | kgv | Relationship added | related to 0030277 |