0028444: Data Exchange - Missed text blocks in Saved Views

Add new STEP entity to connect dimension semantic with presentation.
Fix number of GDTs in Saved View.